// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ICSS show work with the case "duplicate-export": errors 1`] = `Array []`;

exports[`ICSS show work with the case "duplicate-export": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"_test\\": \\"_right_value\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "duplicate-export": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/duplicate-export/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "duplicate-export": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "duplicate-export-in-multiple-export": errors 1`] = `Array []`;

exports[`ICSS show work with the case "duplicate-export-in-multiple-export": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"_test\\": \\"_right_value\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "duplicate-export-in-multiple-export": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/duplicate-export-in-multiple-export/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "duplicate-export-in-multiple-export": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "empty-export": errors 1`] = `Array []`;

exports[`ICSS show work with the case "empty-export": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "empty-export": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/empty-export/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "empty-export": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "empty-import": errors 1`] = `Array []`;

exports[`ICSS show work with the case "empty-import": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "empty-import": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/empty-import/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "empty-import": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "export": errors 1`] = `Array []`;

exports[`ICSS show work with the case "export": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".other {\\\\n  a: a;\\\\n}\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"_test\\": \\"_test\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "export": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/export/source.css",
    ".other {
  a: a;
}
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "export": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "export-reserved-keywords": errors 1`] = `Array []`;

exports[`ICSS show work with the case "export-reserved-keywords": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"constructor\\": \\"constructor\\",
	\\"toString\\": \\"toString\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "export-reserved-keywords": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/export-reserved-keywords/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "export-reserved-keywords": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "exports-only": errors 1`] = `Array []`;

exports[`ICSS show work with the case "exports-only": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"_test\\": \\"_test\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "exports-only": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/exports-only/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "exports-only": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "import": errors 1`] = `Array []`;

exports[`ICSS show work with the case "import": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
import ___CSS_LOADER_ICSS_IMPORT_0___ from \\"-!../../../../../src/index.js??[ident]!./vars.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_ICSS_IMPORT_0___, \\"\\", true);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".className {\\\\n  color: \\" + ___CSS_LOADER_ICSS_IMPORT_0___.locals[\\"primary-color\\"] + \\";\\\\n}\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"primary-color\\": \\"\\" + ___CSS_LOADER_ICSS_IMPORT_0___.locals[\\"primary-color\\"] + \\"\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "import": result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./icss/tests-cases/import/vars.css",
    "
",
    "",
  ],
  Array [
    "./icss/tests-cases/import/source.css",
    ".className {
  color: red;
}
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "import": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "import-reserved-keywords": errors 1`] = `Array []`;

exports[`ICSS show work with the case "import-reserved-keywords": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
import ___CSS_LOADER_ICSS_IMPORT_0___ from \\"-!../../../../../src/index.js??[ident]!./vars.css\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_ICSS_IMPORT_0___, \\"\\", true);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\".className {\\\\n  color: \\" + ___CSS_LOADER_ICSS_IMPORT_0___.locals[\\"primary-color\\"] + \\";\\\\n  display: \\" + ___CSS_LOADER_ICSS_IMPORT_0___.locals[\\"secondary-color\\"] + \\";\\\\n}\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"primary-color\\": \\"\\" + ___CSS_LOADER_ICSS_IMPORT_0___.locals[\\"primary-color\\"] + \\"\\",
	\\"secondary-color\\": \\"\\" + ___CSS_LOADER_ICSS_IMPORT_0___.locals[\\"secondary-color\\"] + \\"\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "import-reserved-keywords": result 1`] = `
Array [
  Array [
    "../../src/index.js?[ident]!./icss/tests-cases/import-reserved-keywords/vars.css",
    "
",
    "",
  ],
  Array [
    "./icss/tests-cases/import-reserved-keywords/source.css",
    ".className {
  color: red;
  display: block;
}
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "import-reserved-keywords": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "multiple-export": errors 1`] = `Array []`;

exports[`ICSS show work with the case "multiple-export": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"_test\\": \\"_test\\",
	\\"_foo\\": \\"_bar\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "multiple-export": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/multiple-export/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "multiple-export": warnings 1`] = `Array []`;

exports[`ICSS show work with the case "multiple-keys-values-in-export": errors 1`] = `Array []`;

exports[`ICSS show work with the case "multiple-keys-values-in-export": module 1`] = `
"// Imports
import ___CSS_LOADER_API_IMPORT___ from \\"../../../../../src/runtime/api.js\\";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(false);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \\"\\\\n\\", \\"\\"]);
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"_test\\": \\"_test\\",
	\\"_test1\\": \\"1\\",
	\\"_test2\\": \\"'string'\\",
	\\"_test3\\": \\"1px 2px 3px\\",
	\\"_test4\\": \\"1px 2px 3px, 1px 2px 3px\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS show work with the case "multiple-keys-values-in-export": result 1`] = `
Array [
  Array [
    "./icss/tests-cases/multiple-keys-values-in-export/source.css",
    "
",
    "",
  ],
]
`;

exports[`ICSS show work with the case "multiple-keys-values-in-export": warnings 1`] = `Array []`;

exports[`ICSS work with exports only: errors 1`] = `Array []`;

exports[`ICSS work with exports only: module 1`] = `
"var ___CSS_LOADER_EXPORT___ = {};
// Exports
___CSS_LOADER_EXPORT___.locals = {
	\\"_test\\": \\"_test\\"
};
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`ICSS work with exports only: result 1`] = `
Object {
  "locals": Object {
    "_test": "_test",
  },
}
`;

exports[`ICSS work with exports only: warnings 1`] = `Array []`;
